Stopping icon/input wrapping.

--- a/styles/ArtistSearch.module.scss
+++ b/styles/ArtistSearch.module.scss
@@ -15,6 +15,7 @@
   margin-bottom: 0px !important;
   // next line overides bulma's display: flex used at intermediate sizes
   display: revert;
+  white-space: nowrap;
 }
 
 .icon {
